# piki

./: .gitignore  AGENTS.md  README.md  pyproject.toml  xiaoyuzhou_tingwu_tool.py
.claude/: CLAUDE.md
.github/workflows/: deploy-pages.yml
.workbuddy/memory/: 2026-06-24.md  2026-07-04.md  MEMORY.md
PikiApp/: Package.resolved  Package.swift  build-app.sh  project.yml
PikiApp/.build/: build.db  build.db-journal  debug.yaml  plugin-tools.yaml  workspace-state.json
PikiApp/PikiApp.xcodeproj/: project.pbxproj
agent_service/: README.md  app.py  config.py  diagnostics.py  errors.py
docs/: README.md
piki-vault/: AGENTS.md  purpose.md
scripts/: build_agent_regression_tracker.mjs  build_macos_dev_release.sh  build_runtime_bundle.py  install_piki_dev_release.sh  run_agent_regression.py
tests/: __init__.py  conftest.py  test_agent_service_api.py  test_agent_service_core.py  test_agent_task_paths.py  test_architecture_boundaries.py  test_build_runtime_bundle.py  test_config.py  test_development_contract.py  test_ingest_queue_and_lint.py  test_inspirations.py  test_lint_cli_compat.py  test_podcast_pipeline.py  test_read_only_query.py  test_rollback_and_source_queue.py  test_runtime_worker.py  test_sdk_runtime_phase4.py  test_sdk_runtime_smoke.py  test_single_source_ingest.py  test_source_intake.py  test_system_context_prompting.py
visual-tech-evaluation/: README.md  comparison-matrix.md  demo-hero-comparison.html  feature-detail-3-demo.html  practical-guide.md  svg-text-descriptions.md
website/: astro.config.mjs  package-lock.json  package.json
(+1740 files in other folders)
