[project]
name = "piki"
version = "0.1.0"
description = "Local-first LLM wiki and agent service prototype."
requires-python = ">=3.12"
dependencies = [
  "claude-agent-sdk>=0.2.91",
  "fastapi>=0.128.0",
  "httpx>=0.27.0",
  "pydantic>=2.12.0",
  "python-multipart>=0.0.20",
  "python-dotenv>=1.0.0",
  "pypdf>=5.0.0",
  "python-docx>=1.1.0",
  "uvicorn>=0.38.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["agent_service*"]
